--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   </head>
   <body>
       <div class="container">
+            
     <h1>Bootstrap Practice</h1>
     <p>Sed finibus sapien luctus pretium interdum. Etiam accumsan nibh neque. Integer congue magna orci, vitae suscipit mi tincidunt quis. Suspendisse fringilla, orci eu aliquet ultricies, libero ipsum maximus massa, et mollis leo massa sed felis. Suspendisse molestie elit non mollis gravida.</p>
+    <div class="card">
+            <div class="card-body">
     <h2>Lorem Ipsum</h2>
     <ul>
       <li>Lorem ipsum dolor sit amet</li>
@@ -17,6 +20,7 @@
       <li>Nisl tempus semper semper</li>
       <li>Purus nisl hendrerit tellus</li>
     </ul>
+</div>
     <h2>Et Consequat Magna</h2>
     <ul>
       <li>Orci ut velit</li>
@@ -38,6 +42,7 @@
       <li>Proin in ex lectus</li>
       <li>Donec accumsan in nisi non ultricies</li>
     </ul>
+</div>
     </div>
   </body>
 </html>
