I added the div with class name of card-title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <li>Purus nisl hendrerit tellus</li>
     </ul>
 </div>
+<div class="card-title">
     <h2>Et Consequat Magna</h2>
+</div>
     <ul>
       <li>Orci ut velit</li>
       <li>Pellentesque cursus justo</li>
