I added the classes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <div class="card-title">
     <h2>Et Consequat Magna</h2>
 </div>
+<div class="card-body">
     <ul>
       <li>Orci ut velit</li>
       <li>Pellentesque cursus justo</li>
@@ -35,6 +36,10 @@
       <li>Morbi dictum</li>
       <li>Ex et malesuada pellentesque</li>
     </ul>
+</div>
+<div class="card-footer">
+        <p>A footer for this specific card</p>
+</div>
     <h2>Morbi Lacinia Mollis Tortor</h2>
     <ul>
       <li>A sodales elit tempor ut</li>
@@ -42,7 +47,7 @@
       <li>Imperdiet eu est faucibus</li>
       <li>Tristique hendrerit mi</li>
       <li>Proin in ex lectus</li>
-      <li>Donec accumsan in nisi non ultricies</li>
+      <li class="bg-danger">Donec accumsan in nisi non ultricies</li>
     </ul>
 </div>
     </div>
